Fix alignment of avatar icons beside comments

--- a/assets/stylesheets/comments.scss
+++ b/assets/stylesheets/comments.scss
@@ -74,10 +74,18 @@
         text-align: center;
         padding-left: .25em;
     }
+
+    .well {
+        margin: 0px;
+    }
 }
 
-.comment-editor {
-    margin-bottom: 20px;
+.comment-row {
+    align-items: center;
+    margin-bottom: 1.25rem;
+    .col-sm-1 {
+        text-align: right;
+    }
 }
 
 .pagination {
